pkg/lang/testdata/ub/outputs/invalid/description-not-string.ub
outputs: {
  a: { value: input.x, description: 42 }
  b: { value: input.x, description: $'{{input.x}}' }
}
